objects/LAT_Docusign_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Docusign Integration config</description>
    <fields>
        <fullName>Enable_Docusign_Contracts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable the docusign functionality, else the old contract flow will run</description>
        <inlineHelpText>Enable the docusign functionality, else the old contract flow will run</inlineHelpText>
        <label>Enable Docusign Contracts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_ComercialDirectorId_PRESTIGE__c</fullName>
        <label>LAT_ComercialDirectorId_PRESTIGE</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_ComercialDirectorId__c</fullName>
        <label>LAT_ComercialDirectorId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_FinancialDirectorId__c</fullName>
        <label>LAT_FinancialDirectorId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_PresidentId__c</fullName>
        <description>PresidentId for Approval</description>
        <label>LAT_PresidentId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Testemunha_PRB_Id_Eventos__c</fullName>
        <label>LAT_Testemunha_PRB_Id_Eventos</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Testemunha_PRB_Id_PRESTIGE__c</fullName>
        <label>LAT_Testemunha_PRB_Id_PRESTIGE</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Testemunha_PRB_Id__c</fullName>
        <description>Testemunha PRB</description>
        <inlineHelpText>Testemunha PRB</inlineHelpText>
        <label>Testemunha PRB Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_TradeManagerId__c</fullName>
        <label>LAT_TradeManagerId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_to_Comercial_Director_Eventos__c</fullName>
        <label>Sent to Comercial Director Eventos</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent_to_Comercial_Director_PRESTIGE__c</fullName>
        <label>Sent_to_Comercial_Director_PRESTIGE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent_to_Comercial_Director__c</fullName>
        <label>Sent_to_Comercial_Director</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent_to_Financial_Director_Eventos__c</fullName>
        <label>Sent_to_Financial_Director_Eventos</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent_to_Financial_Director_PRESTIGE__c</fullName>
        <label>Sent_to_Financial_Director_PRESTIGE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent_to_Financial_Director__c</fullName>
        <label>Sent to Financial Director</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent_to_Gerente_Nacional_Eventos__c</fullName>
        <label>Sent_to_Gerente_Nacional_Eventos</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent_to_President_Eventos__c</fullName>
        <label>Sent_to_President_Eventos</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent_to_President_PRESTIGE__c</fullName>
        <label>Sent_to_President_PRESTIGE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sent_to_President__c</fullName>
        <label>Sent_to_President</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ds_InitUrl__c</fullName>
        <description>initial url to make the callouts</description>
        <inlineHelpText>initial url to make the callouts</inlineHelpText>
        <label>ds_InitUrl</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ds_integrationKey__c</fullName>
        <description>Integration key in the docusing env</description>
        <inlineHelpText>Integration key in the docusing env</inlineHelpText>
        <label>ds_integrationKey</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ds_password__c</fullName>
        <description>Docusign integration password</description>
        <inlineHelpText>Docusign integration password</inlineHelpText>
        <label>ds_password</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ds_username__c</fullName>
        <description>Docusign integration username</description>
        <label>ds_username</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>LAT Docusign Config</label>
</CustomObject>